# pg-rs

./: .gitignore  Cargo.toml  Makefile  README.md  README_CN.md  a.json  a.md  how_to_use_ai.md  test.sql
ai_protocols/: TABLE_ADDING_PROTOCOL.md
config/: services-example.toml
crates/demo-db/: Cargo.toml
crates/demo-db/src/: api.rs  dto.rs  error.rs  lib.rs
crates/demo-db/src/api/: medical.rs  mod.rs  recipe.rs
crates/demo-db/src/calc/: mod.rs
crates/demo-db/src/dto/: base.rs  medical.rs  mod.rs  recipe.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m0001_phase_a_core.rs  m0002_recipe.rs  m01_prompt.rs  m02_users.rs  m03_blood_pressure_records.rs  m04_lipid_records.rs  m05_blood_routine_records.rs  m06_liver_function_records.rs  m07_renal_function_records.rs  m08_urine_records.rs  m09_body_records.rs  m10_sleep_records.rs  m11_other_metrics_records.rs  s01_medical.rs
crates/pg-core/: Cargo.toml  README.md
crates/pg-core/src/: error.rs  lib.rs  manager.rs
crates/pg-core/src/common/: mod.rs  pagination.rs  repository.rs  select_ext.rs  validate.rs
crates/pg-core/src/error/: mod.rs
crates/pg-core/src/query/: mod.rs  select_ext.rs
crates/pg-core/src/repository/: base.rs  macros.rs  mod.rs
crates/pg-sdk/: Cargo.toml  README.md
crates/pg-sdk/src/: error.rs  lib.rs  prompt.rs
crates/pg-sdk/src/core/: repository.rs  validate.rs
crates/pg-sdk/src/domain/prompt/: dto.rs  mod.rs  repo.rs  service.rs
crates/pg-sdk/src/entity/: blood_pressure_records.rs  blood_routine_records.rs  body_records.rs  lib.rs  lipid_records.rs  liver_function_records.rs  metric.rs  mod.rs  observation.rs  other_metrics_records.rs  prelude.rs  prompt.rs  renal_function_records.rs  sleep_records.rs  subject.rs  urine_records.rs  users.rs
crates/pg-sdk/src/table/: mod.rs
crates/pg-sdk/src/table/data_source/: dto.rs
crates/pg-sdk/src/table/metric/: dto.rs
crates/pg-sdk/src/table/observation/: dto.rs
crates/pg-sdk/src/table/subject/: dto.rs  service.rs
crates/pg-tables/: Cargo.toml
crates/pg-tables/src/: lib.rs
crates/pg-tables/src/entity/: data_source.rs  metric.rs  mod.rs  observation.rs  prelude.rs  recipe.rs  subject.rs
crates/pg-tables/src/table/: dto.rs  mod.rs
crates/pg-tables/src/table/data_source/: dto.rs  service.rs
crates/pg-tables/src/table/metric/: dto.rs  service.rs
crates/pg-tables/src/table/observation/: dto.rs  service.rs
crates/pg-tables/src/table/recipe/: dto.rs  service.rs
crates/pg-tables/src/table/subject/: dto.rs  service.rs
crates/web-server/: API.md  Cargo.toml
crates/web-server/src/: main.rs  settings.rs
crates/web-server/src/dto/: example.rs  medical.rs  mod.rs
crates/web-server/src/error/: mod.rs
crates/web-server/src/handlers/: example.rs  llm.rs  medical.rs  mod.rs
crates/web-server/src/routes/: example.rs  llm.rs  medical.rs  mod.rs
crates/web-server/src/statics/: db_manager.rs  mod.rs  task_store.rs
crates/web-server/src/utils/: md_parser.rs  mod.rs
demo/: terminal_step3_demo.html
examples/: README.md  basic_usage.rs  multi_database.rs  prompt_crud.rs
md/: A0.md  A1.md  ER.md  api.md  changes-summary.md  phase-A.md  refactor.md
scripts/: README.md  fresh_db.sh  postgres.sh
sql/: metric.sql  observation.sql  recipe.sql  subject.sql
