[workspace]
members = [
    "crates/*",
]

resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# internal
pg-core = { path = "crates/pg-core" }
pg-sdk = { path = "crates/pg-sdk" }

sea-orm = { version = "2.0.0-rc.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "2.0.0-rc.19", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"



# Root package for examples
[package]
name = "pg-rs"
version.workspace = true
edition.workspace = true

[dependencies]
pg-core.workspace = true
pg-sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

# Examples
[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "multi_database"
path = "examples/multi_database.rs"
