[package]
name = "pg-tables"
version.workspace = true
edition.workspace = true

[dependencies]
pg-core = { path = "../pg-core" }
sea-orm.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
time.workspace = true
async-trait.workspace = true
